--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
-- Code to Snippet image using Carbon-now-cli
-- Installation hi nhi ho rhi :(
+- Code to Snippet image using Carbon-now-cli format to be set
+- Installation hi nhi ho rhi :( (not on linux)
 - VS Code Extension Integration with API
 - VS Code preview in webviews
 - Currently only working for template pages, need to make it work for any page
